docs(log): update changelog since 2026-04-02